--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "axios": "^0.16.2",
     "normalizr": "^1.0.0",
     "react": "^16.0.0",
+    "react-css-modules": "^4.3.0",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.1.1"
   }
