--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["react", ["es2015", { "modules": false }], "stage-0"],
+  "presets": ["react", ["env", { "modules": false }], "stage-0"],
   "plugins": [
     "transform-runtime",
     ["import", { "libraryName": "antd", "style": true }]
