--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
     "autoprefixer": "^6.5.2",
     "babel-core": "^6.18.2",
     "babel-eslint": "^5.0.0-beta6",
-    "babel-loader": "^6.2.7",
+    "babel-loader": "^7.1.2",
     "babel-plugin-antd": "^0.1.3",
     "babel-plugin-import": "^1.4.0",
     "babel-plugin-transform-runtime": "^6.3.13",
-    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.3.13",
-    "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.3.13",
     "babel-runtime": "^6.18.0",
     "biz-mock": "^1.0.1",
@@ -30,7 +29,7 @@
     "eslint": "^1.10.3",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-react": "^3.16.1",
-    "extract-text-webpack-plugin": "^2.1.2",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "less": "^2.7.1",
