--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "antd": "^2.13.1",
+    "ant-design-pro": "^0.2.2-rc.1",
+    "antd": "^3.0.0-beta.1",
     "axios": "^0.16.2",
     "normalizr": "^1.0.0",
     "react": "^16.0.0",
